--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
         <form id="form">
             <div class="name input">
                 <label for="name">Name</label>
-                <input class="space" type="text" id="name" required>
+                <input class="space" type="text" id="name" autocomplete="off" required>
             </div>
             <div class="mail input">
                 <label for="mail">Email</label>
-                <input class="space" type="email" id="mail" required>
+                <input class="space" type="email" id="mail" autocomplete="off" required>
             </div>
             <div class="web input">
                 <label for="website">Website</label>
-                <input class="space" type="text" id="website" required>
+                <input class="space" type="text" id="website" autocomplete="off" required>
             </div>
             <div class="image input">
                 <label for="image">Image link</label>
-                <input class="space" type="text" id="image" required>
+                <input class="space" type="text" id="image" autocomplete="off" required>
             </div>
             <div class="field">
                 <label for="male">Gender</label>
